<resources>
    <string name="app_name">Deezer</string>
    <string name="home_bottom_nav_item_title">Home</string>
    <string name="album_bottom_nav_item_title">Album</string>
    <string name="search_bottom_nav_item_title">Search</string>
    <string name="track_bottom_nav_item_title">Track</string>
    <string name="radio_bottom_nav_item_title">Radio</string>
    
    <string name="popular_albums">Popular Albums</string>
    <string name="popular_artists">Popular Artists</string>
    <string name="label_genres">Genres</string>
    <string name="popular_audiotracks">Popular Audio tracks</string>
    <string name="popular_radios">Popular Radios</string>
</resources>
